--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
-confection 0.1.5
-contourpy  1.3.1
+confection==0.1.5
+contourpy==1.3.1
 cycler==0.12.1
 cymem==2.0.11
 cytoolz==1.0.1
@@ -48,7 +48,7 @@ numba==0.61.0
 numpy==1.26.4
 packaging==24.2
 pandas==2.2.3
-pillow  11.1.0
+pillow==11.1.0
 pip==24.3.1
 plotly==6.0.0
 preshed==3.0.9
