--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ jellyfish==1.1.3
 Jinja2==3.1.6
 joblib==1.4.2
 keybert==0.9.0
+kneed==0.8.5
 kiwisolver==1.4.8
 langcodes==3.5.0
 language_data==1.3.0
