--- a/requirements.txt
+++ b/requirements.txt
@@ -1,102 +1,16 @@
-annotated-types==0.7.0
-bertopic==0.16.4
-blis==1.2.0
-cachetools==5.5.2
-catalogue==2.0.10
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpathlib==0.21.0
-confection==0.1.5
-contourpy==1.3.1
-cycler==0.12.1
-cymem==2.0.11
-cytoolz==1.0.1
-en_core_web_sm==3.8.0
-errant==3.0.0
-filelock==3.17.0
-floret==0.10.5
-fonttools==4.56.0
-fsspec==2025.3.0
-fuzzywuzzy==0.18.0
-gensim==4.3.3
-gramformer==1.0
+bertopic==0.17.3
+docx==0.2.4
 hdbscan==0.8.40
-huggingface-hub==0.29.3
-idna==3.10
-jellyfish==1.1.3
-Jinja2==3.1.6
-joblib==1.4.2
 keybert==0.9.0
-kneed==0.8.5
-kiwisolver==1.4.8
-langcodes==3.5.0
-language_data==1.3.0
-Levenshtein==0.27.1
-llvmlite==0.44.0
 loguru==0.7.3
-marisa-trie==1.2.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-mdurl==0.1.2
-mpmath==1.3.0
-murmurhash==1.0.12
-narwhals==1.30.0
-networkx==3.4.2
 nltk==3.9.1
-numba==0.61.0
-numpy==1.26.4
+numpy==2.3.3
 optuna==4.5.0
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-pip==24.3.1
-plotly==6.0.0
-preshed==3.0.9
-pydantic==2.10.6
-pydantic_core==2.27.2
-Pygments==2.19.1
-pynndescent==0.5.13
-pyparsing==3.2.1
+pandas==2.3.2
 PyPDF2==3.0.1
-pyphen==0.17.2
-python-dateutil==2.9.0.post0
-python-Levenshtein==0.27.1
-pytz==2025.1
-PyYAML==6.0.2
-RapidFuzz==3.13.0
-regex==2024.11.6
-requests==2.32.3
-rich==13.9.4
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.13.1
-sentence-transformers==3.4.1
-sentencepiece==0.2.0
-setuptools==75.6.0
-shellingham==1.5.4
-six==1.17.0
-smart-open==7.1.0
-spacy==3.8.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.5.1
-sympy==1.13.1
-textacy==0.13.0
+scikit-learn==1.7.2
+sentence-transformers==5.1.1
+spacy==3.8.7
 textblob==0.19.0
-thinc==8.3.4
-threadpoolctl==3.5.0
-tokenizers==0.21.0
-toolz==1.0.0
-torch==2.6.0
-tqdm==4.67.1
-transformers==4.49.0
-typer==0.15.2
-typing_extensions==4.12.2
-tzdata==2025.1
-umap-learn==0.5.7
-urllib3==2.3.0
-wasabi==1.1.3
-weasel==0.4.1
-wrapt==1.17.2
+transformers==4.56.2
+umap-learn==0.5.9.post2
