--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ numpy==2.3.3
 optuna==4.5.0
 pandas==2.3.2
 PyPDF2==3.0.1
+python-docx==1.2.0
 scikit-learn==1.7.2
 sentence-transformers==5.1.1
 spacy==3.8.7
